feat: web support for minishlab

--- a/example/web/index.html
+++ b/example/web/index.html
@@ -46,6 +46,10 @@
   <script type="module">
     import './minilm_init.js';
   </script>
+  <!-- REQUIRED FOR: Minish Lab models like Potion Base 8M -->
+  <script type="module">
+    import './minish_lab_init.js';
+  </script>
   <!-- REQUIRED FOR: Whisper models. -->
   <script type="module">
     import './whisper_init.js';
